迅雷下载使用kubespider

--- a/requirements.txt
+++ b/requirements.txt
@@ -114,7 +114,10 @@ wsproto==1.2.0
 zhconv==1.4.3
 pyautogui
 pyppeteer
-pywin32
 requests_html
 magic_google
 pypinyin
+anitopy
+qbittorrent-api
+transmission-rpc
+feapder
